tests/machine/x/kotlin/group_by_join.error
line 25:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/group_by_join.kt:25:25: error: type mismatch: inferred type is MutableMap<Any?, Any?> but MutableMap<String, Any?> was expected
                __g.add(mutableMapOf("o" to o, "c" to c) as MutableMap<Any?, Any?>)
                        ^

 24:                 }
 25:                 __g.add(mutableMapOf("o" to o, "c" to c) as MutableMap<Any?, Any?>)
 26:             }
